login/logout features

--- a/accounts/templates/accounts/register-restaurant-page.html
+++ b/accounts/templates/accounts/register-restaurant-page.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-	User Registration
+	Restaurant Registration
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
 							<div class="user-dashboard loader-holder">
 								<div class="user-holder">
                             <h4 class="text-center" style="margin-bottom: 0;">WELCOME TO FooDie</h4>
-                            <p class="text-center">Please fill this form to get yourself onboarded in the FooDie marketplace.</p>
+                            <p class="text-center">Please fill this form to get your <strong>restaurant</strong> onboarded in the FooDie marketplace.</p>
                             <hr>
                             <div id="restaurant-sets-holder">
                                 <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data" action="{% url 'registerRestaurant' %}">
