--- a/templates/home.html
+++ b/templates/home.html
@@ -236,7 +236,7 @@
 				</div>
 			</div>
 			<!-- Choose From Most Popular Listing End -->
-
+            {% include 'alert/alert_messages.html' %}
 			<!-- Home Pages Elements End  -->
 		</div>
 {% endblock %}
