--- a/accounts/templates/accounts/dashboard-page.html
+++ b/accounts/templates/accounts/dashboard-page.html
@@ -74,6 +74,7 @@
                             </div>
                         </div>
 							</div>
+                            {% include 'alert/alert_messages.html' %}
 						</div>
 					</div>
 				</div>
