sending email for activation and notification for res approval

--- a/accounts/templates/accounts/login-page.html
+++ b/accounts/templates/accounts/login-page.html
@@ -58,6 +58,7 @@
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
                                                             <input type="submit" value="REGISTER" id="btn-next-restaurant-information" class="bgcolor">
+                                                            <a href="{% url 'forgotPassword' %}" class="float-right">forgot password</a>
                                                         </div>
                                                     </div>
                                                 </div>
