--- a/accounts/templates/accounts/custDashboard.html
+++ b/accounts/templates/accounts/custDashboard.html
@@ -1,85 +1,127 @@
 {% extends '_shared/_base.html' %}
-
+{% load static %}
 {% block title %}
-	Login
+	Customer Dashboard
 {% endblock %}
 
 
 {% block content %}
-	<div class="main-section">
-			<div class="page-section nopadding cs-nomargin" style="margin-top: 0px;padding-top: 60px;padding-bottom: 60px;margin-bottom: 0px;">
+    <div class="main-section">
+			<div class="page-section restaurant-detail-image-section" style=" background: url({% static 'extra-images/cover-photo-3.PNG' %}) no-repeat scroll 0 0 / cover;">
+				<!-- Container Start -->
+				<div class="container">
+					<!-- Row Start -->
+					<div class="row">
+						<!-- Column Start -->
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<div class="company-info-detail">
+								<div class="company-info">
+									<div class="img-holder">
+										<figure>
+											<img src="{% static 'extra-images/listing-logo18.png' %}" alt="">
+										</figure>
+									</div>
+
+									<div class="text-holder">
+										<span class="restaurant-title">pouria farhadi</span>
+										<div class="text">
+											<i class="icon-location"></i>
+											<p>+98-911-984-9282</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- Column End -->
+					</div>
+					<!-- Row End -->
+				</div>
+				<!-- Container End -->
+			</div>
+			<div class="page-section account-header buyer-logged-in">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-							<div class="user-dashboard loader-holder" style="width: 450px; min-height: auto">
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                            <!-- load the sidebar here -->
+                            {% include 'accounts/includes/sidebar-dashboard-customer.html' %}
+						</div>
+						<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+							<div class="user-dashboard loader-holder">
 								<div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">Customer Dashboard</h4>
-                            {% comment %}<p class="text-center">Please fill this form to get your <strong>restaurant</strong> onboarded in the FooDie marketplace.</p>{% endcomment %}
-                            <hr>
-                            <div id="restaurant-sets-holder">
-                                {% comment %}<form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'login' %}">
-                                    {% csrf_token %}
-                                    <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                    <div class="row">
 
-                                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                            <div class="field-holder">
-                                                                <label>{{ form.email.label }}</label>
-                                                                {{ form.email }}
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                            <div class="field-holder">
-                                                                <label>{{ form.password.label }}</label>
-                                                                {{ form.password }}
-                                                            </div>
-                                                        </div>
+									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+										<div class="row">
+											<div class="element-title has-border right-filters-row">
+												<h5>Recent Orders</h5>
+												<div class="right-filters row pull-right">
+													<div class="col-lg-6 col-md-6 col-xs-6">
+														<div class="input-field">
+															<select class="chosen-select-no-single">
+																<option selected="selected" value="">Select Orders Status</option>
+																<option value="Processing">Processing</option>
+																<option value="Cancelled">Cancelled</option>
+																<option value="Completed">Completed</option>
+															</select>
+														</div>
+													</div>
 
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+											<div class="user-orders-list">
+												<div class="responsive-table">
+													<ul class="table-generic">
+														<li class="order-heading-titles">
+															<div>Order id</div>
+															<div>Date</div>
+															<div>Total Price</div>
+															<div>Charges</div>
+															<div>Received</div>
+															<div>Status</div>
+														</li>
+														<li class="order-heading-titles">
+															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22606</a></div>
+															<div>Apr 9,2020</div>
+															<div>£ 38.99</div>
+															<div>£ 3.90</div>
+															<div>£ 35.09</div>
+															<div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
+														</li>
 
-                                        <li>
-                                            <ul class="errorlist">
-                                                {% for field in form %}
-                                                	{% for error in field.errors %}
-                                                		<li style="color: red">{{ error }}</li>
-                                                	{% endfor %}
 
-                                                {% endfor %}
 
-                                            </ul>
-                                            <div class="row">
-                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                    <div class="field-holder">
-                                                        <div class="payment-holder">
-                                                            <input type="submit" value="REGISTER" id="btn-next-restaurant-information" class="bgcolor">
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                            <div class="row">
-                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                    {% include 'alert/alert_messages.html' %}
-                                                </div>
-                                            </div>
-                                    </ul>
-                                </form>{% endcomment %}
-                                <p> this is dashboard page </p>
-                                <p>this is {{ user.username }}</p>
-                                <p>this is {{ user.get_role }}</p>
-                            </div>
-                        </div>
+														<li class="order-heading-titles">
+															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22583</a></div>
+															<div>Apr 9,2020</div>
+															<div>£ 26.22</div>
+															<div>£ 2.62</div>
+															<div>£ 23.60</div>
+															<div><span class="order-status" style="background-color: #1e73be;">Processing</span></div>
+														</li>
+														<li class="order-heading-titles">
+															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22493</a></div>
+															<div>Apr 2,2020</div>
+															<div>£ 28.24</div>
+															<div>£ 2.82</div>
+															<div>£ 25.42</div>
+															<div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
+														</li>
+													</ul>
+
+												</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
 							</div>
-                            {% include 'alert/alert_messages.html' %}
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+    {% include 'alert/alert_messages.html' %}
 {% endblock %}
