--- a/accounts/templates/accounts/includes/vendor-dashboard-cover.html
+++ b/accounts/templates/accounts/includes/vendor-dashboard-cover.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="page-section restaurant-detail-image-section" style=" background: url({{ vendor.user_profile.cover_photo.url }}) no-repeat scroll 0 0 / cover;">
+<div class="page-section restaurant-detail-image-section" style=" background: url({% if vendor.user_profile.cover_photo %} {{ vendor.user_profile.cover_photo.url }} {% else %}{% static 'extra-images/cover-photo-1.PNG' %}{% endif %}) no-repeat scroll 0 0 / cover;">
     <!-- Container Start -->
     <div class="container">
         <!-- Row Start -->
@@ -10,7 +10,12 @@
                     <div class="company-info">
                         <div class="img-holder">
                             <figure>
-                                <img src="{{ vendor.user_profile.profile_picture.url }}" alt="">
+	                            {% if vendor.user_profile.profile_picture %}
+	                            	<img src="{{ vendor.user_profile.profile_picture.url }}" alt="cover">
+	                            {% else %}
+		                            <img src="{% static 'extra-images/profile-picture-1.PNG' %}" alt="profile">
+	                            {% endif %}
+
                             </figure>
                         </div>
 
@@ -18,7 +23,10 @@
                             <span class="restaurant-title">{{ vendor.vendor_name }}</span>
                             <div class="text">
                                 <i class="icon-location"></i>
-                                <p>{{ vendor.user_profile.address }}</p>
+	                            {% if vendor.user_profile.address %}
+	                            	<p>{{ vendor.user_profile.address }}</p>
+	                            {% endif %}
+
                             </div>
                         </div>
                     </div>
