--- a/accounts/templates/accounts/login-page.html
+++ b/accounts/templates/accounts/login-page.html
@@ -13,8 +13,8 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 							<div class="user-dashboard loader-holder" style="width: 450px; min-height: auto">
 								<div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">WELCOME TO FooDie</h4>
-                            <p class="text-center">Please fill this form to get your <strong>restaurant</strong> onboarded in the FooDie marketplace.</p>
+                            <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
+                            <p class="text-center">Order food from your favourite restaurant</p>
                             <hr>
                             <div id="restaurant-sets-holder">
                                 <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="{% url 'login' %}">
@@ -57,7 +57,7 @@
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
-                                                            <input type="submit" value="REGISTER" id="btn-next-restaurant-information" class="bgcolor">
+                                                            <input type="submit" value="LOGIN" id="btn-next-restaurant-information" class="bgcolor">
                                                             <a href="{% url 'forgotPassword' %}" class="float-right">forgot password</a>
                                                         </div>
                                                     </div>
