--- a/marketplace/templates/marketplace/listings.html
+++ b/marketplace/templates/marketplace/listings.html
@@ -1,9 +1,104 @@
 {% extends '_shared/_base.html' %}
-
+{% load thumbnail %}
+{% load static %}
 {% block title %}
 	MarketPlace
 {% endblock %}
 
 {% block content %}
-	<h4>Market Place</h4>
+	<div class="main-section">
+			<div class="page-section nopadding cs-nomargin" style="margin-top: 0px;padding-top: 60px;padding-bottom: 10px;margin-bottom: 0px;">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<div class="row">
+								<aside class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+
+								</aside>
+								<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+									<div class="listing-sorting-holder">
+										<div class="row">
+											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+												<h4>{{ vendors_count }} Restaurant's found</h4>
+											</div>
+										</div>
+									</div>
+									<div class="listing simple">
+										<ul>
+											{% for vendor in vendors %}
+												<li>
+												<div class="img-holder">
+													<figure>
+														{% if vendor.user_profile.profile_picture %}
+															{% thumbnail vendor.user_profile.profile_picture "175x165" crop='center' quality=90 as im %}
+			                                                    <img class="img-list wp-post-image" src="{{ im.url }}" alt="">
+			                                                {% endthumbnail %}
+														{% else %}
+															<img class="img-list wp-post-image" src="{% static 'extra-images/profile-picture-1.PNG' %}" alt="">
+														{% endif %}
+
+													</figure>
+													<span class="restaurant-status open"><em class="bookmarkRibbon"></em>Open</span>
+												</div>
+												<div class="text-holder">
+													<div class="list-rating">
+														<div class="rating-star">
+															<span class="rating-box" style="width: 100%;"></span>
+														</div>
+														<span class="reviews">(10)</span>
+													</div>
+													<div class="post-title">
+														<h5>
+															<a href="{% url 'detail-marketplace' slug=vendor.vendor_slug %}">{{ vendor.vendor_name }}</a>
+														</h5>
+													</div>
+													{% if vendor.user_profile.address %}
+														<span class="post-categories">Address :
+														<small class="text-muted">{{ vendor.user_profile.address }}</small>
+														</span>
+													{% endif %}
+												</div>
+												<div class="list-option">
+
+													<a href="{% url 'detail-marketplace' vendor.vendor_slug %}" class="viewmenu-btn text-color">View Menu</a>
+												</div>
+											</li>
+											{% endfor %}
+
+
+
+										</ul>
+									</div>
+									<div class="clearfix"></div>
+									<ul class="pagination">
+										{% if page_obj.has_previous %}
+											<li><a href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+										{% endif %}
+										{% for pageNumber in paginator.page_range %}
+											<li class="{% if pageNumber == page_obj.number %} active {% endif %}">
+												<a href="?page={{ pageNumber }}">{{ pageNumber }}</a>
+											</li>
+										{% endfor %}
+										{% if page_obj.has_next %}
+											<li><a href="?page={{ page_obj.next_page_number }}">Next</a></li>
+										{% endif %}
+									</ul>
+								</div>
+								{% if not request.user.is_authenticated %}
+									<div class="section-sidebar col-lg-3 col-md-3 col-sm-12 col-xs-12">
+									<div class="message-box" style="background-color: #fa9918;">
+										<strong>I'm not Listed!</strong><span>is your restaurant or
+											business not
+											listed on over site</span>
+										<a href="{% url 'registerRestaurant' %}" class="request-btn">Add Your business!</a>
+									</div>
+								</div>
+								{% endif %}
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 {% endblock %}
