--- a/templates/includes/header_component.html
+++ b/templates/includes/header_component.html
@@ -26,6 +26,13 @@
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 					<div class="login-option">
+                        {% if user.is_authenticated %}
+	                        <a href="" class="mr-3">
+
+	                            <i class="bi bi-handbag" style="font-size: 20px; color: #0f0f0f"></i>
+	                            <span class="badge badge-warning" id="cart_counter" style="border-radius: 50px; position: relative; bottom: 10px;">{{ cart_count }}</span>
+							</a>
+                        {% endif %}
 						<a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold mar_a">Marketplace</a>
                         {% if user.is_authenticated %}
                             <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'my-Account' %}">My Account</a>
