made add_to_cart and shop logo quantity realtime by implementing JS.

--- a/marketplace/templates/marketplace/single-marketplace-page.html
+++ b/marketplace/templates/marketplace/single-marketplace-page.html
@@ -132,7 +132,7 @@
 													<div class="price-holder">
 														<span class="price">£{{ food_item.price }}</span>
 														<a href="#" class="decrease_cart" style="margin-right: 20px"><i class="icon-minus3 text-color"></i></a>
-														<label id="qty">0</label>
+														<label id="qty-{{ food_item.id }}">0</label>
 														<a href="#" class="add_to_cart" data-id="{{ food_item.id }}" data-url="{% url 'add-to-cart' food_item.id %}">
 														    <i class="icon-plus4 text-color"></i>
 														</a>
@@ -144,7 +144,11 @@
 											</ul>
 											{% endfor %}
 
+										{% for cart_item in cart_items %}
+											<span id="qty-{{ cart_item.fooditem.id }}" class="item_qty" data-qty="{{ cart_item.quantity }}">{{ cart_item.quantity }}</span>
 
+										{% endfor %}
+										
 
 										</div>
 									</div>
