--- a/marketplace/templates/marketplace/single-marketplace-page.html
+++ b/marketplace/templates/marketplace/single-marketplace-page.html
@@ -131,7 +131,7 @@
 													</div>
 													<div class="price-holder">
 														<span class="price">£{{ food_item.price }}</span>
-														<a href="#" class="decrease_cart" style="margin-right: 20px"><i class="icon-minus3 text-color"></i></a>
+														<a href="#" class="decrease_cart" data-id="{{ food_item.id }}" data-url="{% url 'decrease_cart' food_item.id %}" style="margin-right: 20px"><i class="icon-minus3 text-color"></i></a>
 														<label id="qty-{{ food_item.id }}">0</label>
 														<a href="#" class="add_to_cart" data-id="{{ food_item.id }}" data-url="{% url 'add-to-cart' food_item.id %}">
 														    <i class="icon-plus4 text-color"></i>
