--- a/templates/includes/head_references.html
+++ b/templates/includes/head_references.html
@@ -17,6 +17,7 @@
 <script src="{% static 'js/modernizr.js' %}"></script>
 <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <style>
     body, .main-section p, .mce-content-body p{
