--- a/templates/includes/footer_references.html
+++ b/templates/includes/footer_references.html
@@ -1,3 +1,5 @@
 {% load static %}
 <script src="{% static 'js/scripts.js' %}"></script>
 <script src="{% static 'js/functions.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
