--- a/templates/includes/head_references.html
+++ b/templates/includes/head_references.html
@@ -13,11 +13,10 @@
 <link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 <!-- JAVASCRIPT -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="{% static 'js/modernizr.js' %}"></script>
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="{% static 'js/bootstrap.js' %}"></script>
-<script src="{% static 'js/custom.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <style>
     body, .main-section p, .mce-content-body p{
