--- a/templates/includes/header_component.html
+++ b/templates/includes/header_component.html
@@ -27,7 +27,7 @@
 				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 					<div class="login-option">
                         {% if user.is_authenticated %}
-	                        <a href="" class="mr-3">
+	                        <a href="{% url 'cart' %}" class="mr-3">
 
 	                            <i class="bi bi-handbag" style="font-size: 20px; color: #0f0f0f"></i>
 	                            <span class="badge badge-warning" id="cart_counter" style="border-radius: 50px; position: relative; bottom: 10px;">{{ cart_count }}</span>
