--- a/accounts/templates/accounts/includes/sidebar-dashboard-vendor.html
+++ b/accounts/templates/accounts/includes/sidebar-dashboard-vendor.html
@@ -10,6 +10,9 @@
             <li class="{% if 'menu-builder' in request.path %} active {% endif %}">
                 <a href="{% url 'menu-builder' %}"><i class="icon-menu5"></i>Menu Builder</a>
             </li>
+            <li class="{% if 'opening_hours' in request.path %} active {% endif %}">
+                <a href="{% url 'opening-hours' %}"><i class="bi bi-clock-history"></i>Opening Hour</a>
+            </li>
             <li><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
             <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li>
             <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li>
