bug fixed/ tax implemented on cart

--- a/marketplace/templates/marketplace/cart-page.html
+++ b/marketplace/templates/marketplace/cart-page.html
@@ -108,7 +108,7 @@
 													</span>
 												</li>
 												<li style="list-style-type: none;">
-													Tax
+													Value-added tax (VAT)
 													<span class="price float-right">
 														<span class="currency">$</span>
 														<span id="tax">{{ tax }}</span>
