--- a/marketplace/templates/marketplace/single-marketplace-page.html
+++ b/marketplace/templates/marketplace/single-marketplace-page.html
@@ -30,7 +30,7 @@
 									</figure>
 								</div>
 								<div class="text-holder">
-									<span class="restaurant-title">{{ vendor.vendor_name }}</span>
+									<span class="restaurant-title">{{ vendor.vendor_name }} {% if vendor.is_open %}<i class="bi bi-door-open"></i>{% else %}<i class="bi bi-door-closed"></i>{% endif %}</span>
 								<div class="text">
 									<i class="icon-local_pizza"></i>
 									<p>
@@ -44,33 +44,35 @@
 								</div>
 
 							</div>
+							{% if opening_hours %}
 							<div class="delivery-timing reviews-sortby">
 
 								<ul>
 									<li>
 										<a href="#" class="reviews-sortby-active">
 											<span>Today :</span>
-											11:00 am - 11:00 pm <i class="icon-chevron-small-down"></i>
+											{% if current_opening_hours %}
+											{% for hour in current_opening_hours %}
+												{% if hour.is_closed %}Close{% else %}{{ hour.from_hour }} - {{ hour.to_hour }}<i class="bi bi-clock"></i>{% endif %}
+											{% endfor %}
+
+											{% endif %}  <i class="icon-chevron-small-down"></i>
 										</a>
-										<ul class="delivery-dropdown">
-											<li><a href="#"><span class="opend-day">Monday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-														pm</span></a></li>
-											<li><a href="#"><span class="opend-day">Tuesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-														pm</span></a></li>
-											<li><a href="#"><span class="opend-day">Wednesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-														pm</span></a></li>
-											<li><a href="#"><span class="opend-day">Thursday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-														pm</span></a></li>
-											<li><a href="#"><span class="opend-day">Friday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-														pm</span></a></li>
-											<li><a href="#"><span class="opend-day">Saturday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-														pm</span></a></li>
-											<li><a href="#"><span class="opend-day">Sunday</span> <span class="opend-time close-day"><small>:</small>Closed</span></a>
-											</li>
+
+											<ul class="delivery-dropdown">
+											{% for hour in opening_hours %}
+												<li><a href="#"><span class="opend-day">{{ hour }}</span> <span class="opend-time"><small>:</small>
+													{% if hour.is_closed %}Close{% else %}{{ hour.from_hour }} - {{ hour.to_hour }}{% endif %}</span></a></li>
+											{% endfor %}
+
+
 										</ul>
+
+
 									</li>
 								</ul>
 							</div>
+							{% endif %}
 						</div>
 					</div>
 					<!-- Column End -->
