--- a/templates/home.html
+++ b/templates/home.html
@@ -130,9 +130,16 @@
 														<img class="thumbnail attachment-full size-full wp-post-image" src="{% static 'extra-images/profile-picture-1.PNG' %}" alt="">
 													{% endif %}
 												</a></figure>
-												<span class="restaurant-status open">
+												{% if vendor.is_open %}
+													<span class="restaurant-status open">
 													<em class="bookmarkRibbon"></em>open
 												</span>
+
+												{% else %}
+													<span class="restaurant-status close">
+													<em class="bookmarkRibbon"></em>close
+												</span>
+												{% endif %}
 											</div>
 											<div class="text-holder">
 												<div class="list-rating">
