--- a/accounts/templates/accounts/includes/sidebar-dashboard-customer.html
+++ b/accounts/templates/accounts/includes/sidebar-dashboard-customer.html
@@ -1,8 +1,12 @@
 <div class="user-account-nav user-account-sidebar">
     <div class="user-nav-list">
         <ul>
-            <li class="active"><a href="{% url 'custDashboard' %}"><i class="icon-dashboard3"></i>Dashboard</a></li>
-            <li><a href="restaurant-restaurant.html"><i class="icon-add_shopping_cart"></i>My Orders</a></li>
+            <li class="{% if request.path == '/custDashboard/' or request.path == '/customer/' %} active {% endif %}">
+                <a href="{% url 'custDashboard' %}"><i class="icon-dashboard3"></i>Dashboard</a>
+            </li>
+            <li class="{% if 'profile' in request.path %} active {% endif %}">
+                <a href="{% url 'customer_profile' %}"><i class="bi bi-person-bounding-box"></i>Profile</a>
+            </li>
             <li><a href="restaurant-menu-builder.html"><i class="icon-build"></i>Profile settings</a></li>
             <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
             <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a></li>
