--- a/marketplace/templates/marketplace/cart-page.html
+++ b/marketplace/templates/marketplace/cart-page.html
@@ -121,7 +121,7 @@
 														<span id="total">{{ grandtotal }}</span>
 													</span>
 												</li>
-
+												<a href="{% url 'checkout' %}" class="btn btn-danger w-100 p-2 mt-2 mb-2">PROCEED TO CHECKOUT</a>
 											</ul>
 										</div>
 									</div>
