--- a/templates/_shared/_base.html
+++ b/templates/_shared/_base.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>FooDie - {% block title %}{% endblock %}</title>
     {% include 'includes/head_references.html' %}
+	{% block head %}{% endblock %}
 </head>
 <body>
 	<!--Main Wrapper-->
