--- a/accounts/templates/accounts/includes/sidebar-dashboard-customer.html
+++ b/accounts/templates/accounts/includes/sidebar-dashboard-customer.html
@@ -7,9 +7,10 @@
             <li class="{% if 'profile' in request.path %} active {% endif %}">
                 <a href="{% url 'customer_profile' %}"><i class="bi bi-person-bounding-box"></i>Profile</a>
             </li>
-            <li><a href="restaurant-menu-builder.html"><i class="icon-build"></i>Profile settings</a></li>
-            <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
-            <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a></li>
+            <li class="{% if 'my_orders' in request.path or 'my_orders_detail' in request.path %} active {% endif %}">
+                <a href="{% url 'my_orders_list' %}"><i class="icon-add_shopping_cart"></i>My Orders</a>
+            </li>
+            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Signout</a></li>
         </ul>
     </div>
 </div>
