--- a/accounts/templates/accounts/includes/sidebar-dashboard-vendor.html
+++ b/accounts/templates/accounts/includes/sidebar-dashboard-vendor.html
@@ -13,11 +13,12 @@
             <li class="{% if 'opening_hours' in request.path %} active {% endif %}">
                 <a href="{% url 'opening-hours' %}"><i class="bi bi-clock-history"></i>Opening Hour</a>
             </li>
-            <li><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
-            <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li>
-            <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li>
-            <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
-            <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a></li>
+            <li class="{% if 'my_orders' in request.path %} active {% endif %}">
+                <a href="{% url 'my_orders_vendor' %}"><i class="icon-add_shopping_cart"></i>My Orders</a>
+            </li>
+{% comment %}            <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li>
+            <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li>{% endcomment %}
+            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Signout</a></li>
         </ul>
     </div>
 </div>
