--- a/accounts/templates/accounts/vendorDashboard.html
+++ b/accounts/templates/accounts/vendorDashboard.html
@@ -30,7 +30,7 @@
                                                     Total Orders
                                                 </div>
                                                 <div class="card-body text-center">
-                                                    12345
+                                                    {{ orders_count }}
                                                 </div>
                                             </div>
                                         </div>
@@ -40,7 +40,7 @@
                                                     Total Revenue
                                                 </div>
                                                 <div class="card-body text-center">
-                                                    $544.00
+                                                    ${{ total_revenue }}
                                                 </div>
                                             </div>
                                         </div>
@@ -50,7 +50,7 @@
                                                     This month
                                                 </div>
                                                 <div class="card-body text-center">
-                                                    $145.50
+                                                    ${{ current_month_revenue }}
                                                 </div>
                                             </div>
                                         </div>
@@ -58,67 +58,38 @@
                                     </div>
                                     <br>
                                     <br>
-									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-										<div class="row">
-											<div class="element-title has-border right-filters-row">
-												<h5>Recent Orders</h5>
-												<div class="right-filters row pull-right">
-													<div class="col-lg-6 col-md-6 col-xs-6">
-														<div class="input-field">
-															<select class="chosen-select-no-single">
-																<option selected="selected" value="">Select Orders Status</option>
-																<option value="Processing">Processing</option>
-																<option value="Cancelled">Cancelled</option>
-																<option value="Completed">Completed</option>
-															</select>
-														</div>
-													</div>
-
-												</div>
-											</div>
-										</div>
-									</div>
+									<h5 class="text-uppercase">
+                                        Recent Orders
+                                    </h5>
 									<div class="row">
 										<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 											<div class="user-orders-list">
 												<div class="responsive-table">
-													<ul class="table-generic">
-														<li class="order-heading-titles">
-															<div>Order id</div>
-															<div>Date</div>
-															<div>Total Price</div>
-															<div>Charges</div>
-															<div>Received</div>
-															<div>Status</div>
-														</li>
-														<li class="order-heading-titles">
-															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22606</a></div>
-															<div>Apr 9,2020</div>
-															<div>£ 38.99</div>
-															<div>£ 3.90</div>
-															<div>£ 35.09</div>
-															<div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
-														</li>
+													<table class="table table-hover">
+													  <thead>
+													    <tr>
+													      <th scope="col">Order #</th>
+													      <th scope="col">Name</th>
+													      <th scope="col">Total</th>
+													      <th scope="col">Status</th>
+													      <th scope="col">Date</th>
+													      <th scope="col">Action</th>
+													    </tr>
+													  </thead>
+													  <tbody>
+													  {% for order in recent_orders %}
+														  <tr>
+                                                            <td><b><a class="text-dark" href="{% url 'order-detail-vendor' order_number=order.order_number is_mine='vendor' %}">{{ order.order_number }}</a></b></td>
+													      	<td>{{ order.name }}</td>
+													      	<td>{{ order.get_total_by_vendor.grand_total }}</td>
+													      	<td>{{ order.status }}</td>
+													      	<td>{{ order.created_at }}</td>
+													      	<td><a href="{% url 'order-detail-vendor' order_number=order.order_number is_mine='vendor' %}" class="btn btn-danger">Details</a></td>
+													    </tr>
+													  {% endfor %}
 
-
-
-														<li class="order-heading-titles">
-															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22583</a></div>
-															<div>Apr 9,2020</div>
-															<div>£ 26.22</div>
-															<div>£ 2.62</div>
-															<div>£ 23.60</div>
-															<div><span class="order-status" style="background-color: #1e73be;">Processing</span></div>
-														</li>
-														<li class="order-heading-titles">
-															<div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22493</a></div>
-															<div>Apr 2,2020</div>
-															<div>£ 28.24</div>
-															<div>£ 2.82</div>
-															<div>£ 25.42</div>
-															<div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
-														</li>
-													</ul>
+													  </tbody>
+													</table>
 
 												</div>
 											</div>
