--- a/templates/home.html
+++ b/templates/home.html
@@ -80,13 +80,13 @@
 										<li class="has-border">
 										<figure>
 											{% if vendor.user_profile.profile_picture %}
-												<a href="#">
+												<a href="{% url 'detail-marketplace' slug=vendor.vendor_slug %}">
 												{% thumbnail vendor.user_profile.profile_picture "175x165" crop='center' quality=90 as im %}
                                                     <img class="thumbnail attachment-full size-full wp-post-image" src="{{ im.url }}" alt="">
                                                 {% endthumbnail %}
 												</a>
 											{% else %}
-												<a href="#">
+												<a href="{% url 'detail-marketplace' slug=vendor.vendor_slug %}">
                                                     <img class="thumbnail attachment-full size-full wp-post-image" src="{% static 'extra-images/profile-picture-1.PNG' %}" alt="">
 												</a>
 											{% endif %}
@@ -121,7 +121,7 @@
 										<li class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 										<div class="list-post featured">
 											<div class="img-holder">
-												<figure><a href="#">
+												<figure><a href="{% url 'detail-marketplace' slug=vendor.vendor_slug %}">
 													{% if vendor.user_profile.profile_picture %}
 														{% thumbnail vendor.user_profile.profile_picture "175x165" crop='center' quality=90 as im %}
                                                             <img class="thumbnail attachment-full size-full wp-post-image" src="{{ im.url }}" alt="">
@@ -150,7 +150,7 @@
 												</div>
 												<div class="post-title">
 													<h5>
-														<a href="listing-detail.html">{{ vendor.vendor_name }}</a>
+														<a href="{% url 'detail-marketplace' slug=vendor.vendor_slug %}">{{ vendor.vendor_name }}</a>
 														<span class="sponsored text-color">Sponsored</span>
 													</h5>
 												</div>
