--- a/customer/templates/customer/customer-profile-page.html
+++ b/customer/templates/customer/customer-profile-page.html
@@ -110,7 +110,7 @@
 															<div class="field-holder">
 																<label>{{ profile_form.address.label }}</label>
                                                                 {{ profile_form.address }}
-                                                                <small class="text-muted float-right">powered by Google</small>
+                                                                <small class="text-muted float-right">>> Some map APIs can empower it <<</small>
 															</div>
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -132,13 +132,6 @@
 																<label>{{ profile_form.state.label }}</label>
 																{% comment %}<input type="text" placeholder="i.e Pizza Hut" class="foodbakery-dev-req-field">{% endcomment %}
                                                                 {{ profile_form.state }}
-															</div>
-														</div>
-														<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-															<div class="field-holder">
-																<label>{{ profile_form.pincode.label }}</label>
-																{% comment %}<input type="text" placeholder="i.e Pizza Hut" class="foodbakery-dev-req-field">{% endcomment %}
-                                                                {{ profile_form.pincode }}
 															</div>
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
