--- a/templates/home.html
+++ b/templates/home.html
@@ -13,12 +13,12 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-							<div class="element-title">
-								<h1 style="font-size: 40px; color: #505050; text-transform: uppercase; line-height: 50px; margin-bottom: 25px; text-align:center;">
-									We are in the business of food<br>our restaurants do</h1>
+							<div class="">
+								<h1 style="font-size: 40px; color: #d73612; text-transform: uppercase; line-height: 50px; margin-bottom: 25px; text-align:center;">
+									We are in the business of food<br>Grow your business</h1>
 								<p style="font-size: 18px; letter-spacing: 1px; color: #505050; text-align:center;">
-									Ridiculus sociosqu
-									cursus neque cursus curae ante scelerisque vehicula.</p>
+									FooDie MarkerPlace	
+								</p>
 							</div>
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-3 col-xs-12 ">
@@ -154,8 +154,8 @@
 														<span class="sponsored text-color">Sponsored</span>
 													</h5>
 												</div>
-												{% if vendor.user_profile.city and vendor.user_profile.state and vendor.user_profile.pincode %}
-													<span>{{ vendor.user_profile.city }}, {{ vendor.user_profile.state }}, {{ vendor.user_profile.pincode }}</span>
+												{% if vendor.user_profile.city and vendor.user_profile.state %}
+													<span>{{ vendor.user_profile.city }}, {{ vendor.user_profile.state }}</span>
 
 												{% endif %}
 											</div>
