--- a/templates/includes/footer_component.html
+++ b/templates/includes/footer_component.html
@@ -6,7 +6,7 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="widget widget-newsletter">
 								<div class="widget-title">
-									<h5>Subscribe to our Newsletter</h5>
+									<h5>Join to explore more</h5>
 								</div>
 								<div class="fieldset">
 									<form action="#">
@@ -17,7 +17,7 @@
 											</label>
 										</div>
 										<div class="field-holder btn-holder">
-											<input class="subscribe-btn bgcolor" type="submit" value="Sign Up">
+											<a href="{% url 'registerUser' %}" class="subscribe-btn ">Sign Up</a>
 										</div>
 									</form>
 								</div>
@@ -32,7 +32,7 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="copyright-inner">
 								<div class="copy-right">
-									<p>© 2020 Foodbakery. All Rights Reserved. Developed By <a href="#">Rathan Kumar</a>
+									<p>© FooDie. All Rights Reserved. Developed By <a href="#">Pouria Farhadi</a>
 									</p>
 								</div>
 							</div>
